# bank_rag

./: .gitignore  AGENTS.md  PROMPTS.md  README.md  README_USE.md  py_kb.md  py_kb.py  pyproject.toml
.claude/: settings.local.json
RAG_PLUS/: auth.py  config.py  main.py  mcp_registry.py  rag_runtime.py  redis_runtime.py  router.py  schemas.py  workflow.py
data/demo_kb/: incident_runbook.md  ops_manual.md  李绅志简历-20260409212453.docx
data/eval_samples/: bad_case_payload_samples.json  perf_queries.json  ragas_dataset_samples.json  ragas_eval.json
docs/: INDEX.md  interview_bank.md  project_intelligence.md  session_state.md
docs/code_reading/: BEGINNER_GUIDE.md  COMMENTED_FLOW_GUIDE.md  PERF_AB_EVAL.md  PROJECT_MAP.md  PYTHON_KNOWLEDGE.md  REQUEST_FLOW.md  STARTUP_FLOW.md
docs/learning/: 01_START_HERE.md  02_STARTUP_CHAIN.md  03_REQUEST_CALL_CHAIN.md  04_MODULE_DUTIES.md  05_FRAMEWORKS_IN_THIS_PROJECT.md  06_DEBUG_PLAYBOOK.md  INTERVIEW_RECAP.md  MASTERY_TRACKER.md  QUESTION_BANK.md  README.md  VALIDATION_REPORT.md
learning_skeletons/: README.md
learning_skeletons/api_skeleton/: DEBUG_GUIDE.md  SKELETON.md
learning_skeletons/ingestion_skeleton/: DEBUG_GUIDE.md  SKELETON.md
learning_skeletons/mcp_skeleton/: DEBUG_GUIDE.md  SKELETON.md
scripts/: perf_ab_eval.ps1  perf_ab_eval.py  regression_run.ps1  regression_run.py  start_mcp.ps1  start_rag_plus.ps1
spec/: ACCEPTANCE.md  DEV_SPEC.md  RAG_PLUS_SPEC.md  openapi.yaml
src/hz_bank_rag/: __init__.py
tests/: test_mcp_wrapper.py  test_metadata_store.py  test_qa_service.py  test_seed_demo.py  test_smoke.py
(+50 files in other folders)
