[project]
name = "hz-bank-rag"
version = "0.2.0"
description = "Hangzhou Bank production operation center intelligent QA system based on modular RAG."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "numpy>=1.26.0",
  "rank-bm25>=0.2.2",
  "jieba>=0.42.1",
  "pymilvus==2.6.11",
  "langchain-text-splitters>=0.3.0",
  "pandas>=2.2.2",
  "datasets>=2.21.0",
  "pypdf>=5.0.0",
  "python-docx>=1.1.2",
  "python-pptx>=1.0.2",
  "Pillow>=10.4.0",
  "pytesseract>=0.3.10",
  "rapidocr-onnxruntime>=1.3.24",
  "pywin32>=306; platform_system == 'Windows'",
  "httpx>=0.27.0",
  "redis>=5.0.8",
]

[project.optional-dependencies]
ml = [
  "sentence-transformers>=3.0.1",
  "transformers>=4.44.0",
  "torch>=2.3.0",
]
ragas = [
  "ragas>=0.1.14",
  "langchain-openai>=0.2.0",
]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
hz-rag-seed = "hz_bank_rag.examples.seed_demo:main"
hz-rag-mcp = "hz_bank_rag.mcp.main:run"
hz-rag-plus = "RAG_PLUS.main:run"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
